[package]
name = "lk_os"
version = "0.1.0"
authors = ["Lachlan Kermode <lachiekermode@gmail.com>"]

[dependencies]
bootloader = "0.3.4"
volatile = "0.2.3"
spin = "0.4.9"

[dependencies.lazy_static]
version= "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
